# real-estate-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
module/: params.py  preprocessor.py  trainer.py
prediction-batch/: Dockerfile  predict
scripts/: predict.py  train.py
training-batch/: Dockerfile  train
