[tool.poetry]
name = "real-estate-prediction"
version = "0.1.0"
description = ""
authors = ["yasuhiro-ikeda-pratya <ikeda.yasuhiro@pratya.tech>"]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^1.5.2"
lightgbm = "^3.3.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
